http and service plumbing
Small refactor to expand differ client into a full Matcher
implementation.
Introduce notifications http endpoint.
Wire notifier into the initialization control structure.
Introduce notifier into local dev environment.

Signed-off-by: ldelossa <ldelossa@redhat.com>

--- a/config.yaml.sample
+++ b/config.yaml.sample
@@ -53,7 +53,7 @@ notifier:
         type: "direct"
         durable: true
         auto_delete: false
-    uri: "amqp://user:pass@host:10000/vhost"
+    uris: ["amqp://user:pass@host:10000/vhost"]
     routing_key: "notifications" 
     callback: "http://clair-notifier/api/v1/notifications"
 
